--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
+    "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-query": "^5.90.11",
     "class-variance-authority": "^0.7.1",
@@ -24,6 +25,7 @@
     "cmdk": "^1.1.1",
     "firebase": "^12.6.0",
     "lucide-react": "^0.555.0",
+    "motion": "^12.23.24",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
