--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "firebase": "^12.6.0",
+    "heic2any": "^0.0.4",
     "lucide-react": "^0.555.0",
     "motion": "^12.23.24",
     "next-themes": "^0.4.6",
